src/components/ToDoList/ToDoList.css
.background {
  background-color:seashell;
  background-image: url(../../assets/notebook_paper.png);
  max-width: 60vw;
  margin:auto;
  margin-top: 3em;
  align-items: center;
}

.header {
  text-align: center;
  text-decoration: underline;
}

.textEntry {
  text-align: center;
}

.entry {
  width: 20em;
  max-height: 2em;
  padding-left: 0.5em;
}

